--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@docusaurus/core": "2.0.0-beta.16",
     "@docusaurus/preset-classic": "2.0.0-beta.16",
     "@mdx-js/react": "^1.6.22",
+    "@widgetbot/react-embed": "^1.4.0",
     "clsx": "^1.1.1",
     "docusaurus-lunr-search": "^2.1.15",
     "prism-react-renderer": "^1.2.1",
