--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.18",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.0-beta.18",
     "@tsconfig/docusaurus": "^1.0.5",
+    "cypress": "^9.5.4",
     "typescript": "^4.6.3"
   }
 }
