--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "docu-2",
-  "version": "0.0.1",
+  "name": "villavicencio-homesitting",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -21,6 +21,7 @@
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "^2.3.2",
     "prism-react-renderer": "^1.3.5",
+    "qrcode.react": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
