--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.1",
-    "@docusaurus/preset-classic": "^2.4.1",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "docusaurus-lunr-search": "^2.3.2",
-    "prism-react-renderer": "^1.3.5",
+    "@docusaurus/core": "3.0.0",
+    "@docusaurus/preset-classic": "3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "docusaurus-lunr-search": "^3.3.0",
+    "prism-react-renderer": "^2.1.0",
     "qrcode.react": "^3.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "browserslist": {
     "production": [
@@ -38,9 +37,13 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.1",
-    "@tsconfig/docusaurus": "^1.0.6",
-    "cypress": "^9.7.0",
-    "typescript": "^4.9.3"
+    "@docusaurus/module-type-aliases": "^3.0.0",
+    "@docusaurus/tsconfig": "3.0.0",
+    "@docusaurus/types": "3.0.0",
+    "@types/react": "^18.2.29",
+    "typescript": "~5.2.2"
+  },
+  "engines": {
+    "node": ">=18.0"
   }
 }
