--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.1",
-    "@docusaurus/preset-classic": "^2.4.1",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "docusaurus-lunr-search": "^2.3.2",
-    "prism-react-renderer": "^1.3.5",
+    "@docusaurus/core": "3.0.0",
+    "@docusaurus/preset-classic": "3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "cypress": "^13.5.1",
+    "docusaurus-lunr-search": "^3.3.0",
+    "prism-react-renderer": "^2.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
