--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "cypress:open": "cypress open"
+    "cy:open": "cypress open",
+    "test": "cypress run"
   },
   "dependencies": {
     "@docusaurus/core": "3.0.0",
     "@docusaurus/preset-classic": "3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "cypress": "^13.5.1",
     "docusaurus-lunr-search": "^3.3.0",
     "prism-react-renderer": "^2.1.0",
     "qrcode.react": "^3.1.0",
