Add .vscode/settings.json with cSpell.words configuration Update technology.mdx with revised Alexa commands Update emergency.mdx with vet information Update authors.yml with Tayler's profile picture Update intro.mdx with corrected formatting Update routine.mdx with corrected information about Olympia's harness Update package.json with updated dependencies Add blog post for April 2024 about CJ's diet Update accidents.mdx with revised instructions for cleaning up pet accidents

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -8,7 +8,7 @@ tayler:
   name: Tayler
   title: Chief Editor and Pet Mom
   url: https://www.instagram.com/taylersally_v/
-  image_url: https://media-exp1.licdn.com/dms/image/C4D03AQEG7f87tPp2xw/profile-displayphoto-shrink_800_800/0/1620405880207?e=1655337600&v=beta&t=sKvWtUdfNQh7i1czuu5sAkSXOAi9bVl7aM285OHT2I8
+  image_url: https://media.licdn.com/dms/image/C4D03AQEG7f87tPp2xw/profile-displayphoto-shrink_800_800/0/1620405880634?e=1717632000&v=beta&t=kFBKp6Tp_Sxj2vgkaLGVay17I3TrDK345t3rinMzB4A
 
 cj:
   name: CJ
