--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@docusaurus/core": "3.0.0",
-    "@docusaurus/preset-classic": "3.0.0",
+    "@docusaurus/core": "^3.2.1",
+    "@docusaurus/preset-classic": "^3.2.1",
     "@mdx-js/react": "^3.0.0",
     "docusaurus-lunr-search": "^3.3.0",
     "prism-react-renderer": "^2.1.0",
@@ -37,9 +37,9 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.0.0",
-    "@docusaurus/tsconfig": "3.0.0",
-    "@docusaurus/types": "3.0.0",
+    "@docusaurus/module-type-aliases": "^3.2.1",
+    "@docusaurus/tsconfig": "^3.2.1",
+    "@docusaurus/types": "^3.2.1",
     "@types/react": "^18.2.29",
     "typescript": "~5.2.2"
   },
