--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@docusaurus/core": "^3.2.1",
     "@docusaurus/preset-classic": "^3.2.1",
     "@mdx-js/react": "^3.0.0",
+    "autoprefixer": "^10.4.19",
     "docusaurus-lunr-search": "^3.3.0",
+    "postcss": "^8.4.38",
     "prism-react-renderer": "^2.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.3"
   },
   "browserslist": {
     "production": [
