--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "@docusaurus/tsconfig": "^3.2.1",
     "@docusaurus/types": "^3.2.1",
     "@types/react": "^18.2.29",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "~5.2.2"
   },
   "engines": {
