--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@docusaurus/types": "^3.2.1",
     "@types/react": "^18.2.29",
     "autoprefixer": "^10.4.19",
+    "lefthook": "^1.6.15",
     "postcss": "^8.4.38",
     "prettier": "^3.3.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
